[package]
name = "shepherd"
version = "0.1.4"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"
description = """
A distributed video encoder that splits files into chunks to encode them on
multiple machines in parallel.
"""
repository = "https://github.com/martindisch/shepherd"
readme = "README.md"
keywords = ["video", "encoder", "split", "parallel", "distributed"]
categories = ["command-line-utilities", "multimedia::video", "encoding"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33.4"
dirs = "4.0.0"
crossbeam = "0.8.2"
log = "0.4.17"
simplelog = "0.12.0"
ctrlc = { version = "3.2.3", features = ["termination"] }

[badges]
maintenance = { status = "passively-maintained" }
